--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install a new Chromium
         run: sudo apt install -y chromium-browser
       - name: Install all necessary packages
-        run: pip install requests beautifulsoup4 pandas webdriver-manager selenium
+        run: pip install requests beautifulsoup4 pandas webdriver-manager selenium undetected_chromedriver
       - name: Run the scraping script
         run: python scraper.py
 
