--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -15,10 +15,10 @@ jobs:
         run: apt list --installed
       - name: Remove Chrome
         run: sudo apt purge google-chrome-stable
-      - name: Remove default Chromium
-        run: sudo apt purge chromium-browser
-      - name: Install a new Chromium
-        run: sudo apt install -y chromium-browser
+      - name: Install a new Chrome
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: latest
       - name: Install all necessary packages
         run: pip install requests beautifulsoup4 pandas webdriver-manager selenium undetected_chromedriver
       - name: Run the scraping script
