--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -17,4 +17,12 @@ jobs:
         run: pip install requests beautifulsoup4 pandas webdriver-manager selenium undetected_chromedriver
       - name: Run the scraping script
         run: python scraper.py
+      - name: Commit and push if content changed
+        run: |-
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add -A
+          timestamp=$(date -u)
+          git commit -m "Latest data: ${timestamp}" || exit 0
+          git push
 
